infra-configs/central-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: central-gateway
  namespace: infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: All
  addresses:
    - type: IPAddress
      value: 10.0.0.199

  listeners:
    - name: minegate-je
      port: 25565
      protocol: TCP
    - name: minegate-be
      port: 19132
      protocol: UDP

    - name: wireguard
      port: 51820
      protocol: UDP

    - name: lwyd-front
      port: 3000
      protocol: TCP
